--- a/lacak_pesanan.html
+++ b/lacak_pesanan.html
@@ -1,140 +1,116 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>
-        Lacak Pesanan
-    </title>
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lacak Pesanan</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style css/lacak_pesanan.css">
+    <link rel="stylesheet" href="style css/navbar.css">
 
-        .header {
-            background-color: #6A1B1A;
-            color: white;
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
 
-        .header i {
-            font-size: 24px;
-        }
 
-        .header h1 {
-            font-size: 18px;
-            margin: 0;
-        }
-
-        .map-container {
-            position: relative;
-        }
-
-        .map {
-            width: 100%;
-            height: 80vh;
-        }
-
-        .order-status {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            padding: 10px;
-        }
-
-        .order-status .header {
-            background-color: #6A1B1A;
-            color: white;
-            border-top-left-radius: 10px;
-            border-top-right-radius: 10px;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .order-status .content {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-        }
-
-        .order-status .content img {
-            width: 50px;
-            height: 50px;
-            margin-right: 10px;
-        }
-
-        .order-status .content .details {
-            flex-grow: 1;
-        }
-
-        .order-status .content .details h2 {
-            font-size: 16px;
-            margin: 0;
-        }
-
-        .order-status .content .details p {
-            margin: 0;
-            color: gray;
-        }
-
-        .order-status .content .track-btn {
-            background-color: white;
-            border: 1px solid #6A1B1A;
-            border-radius: 20px;
-            padding: 5px 15px;
-            color: #6A1B1A;
-            font-weight: bold;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="header">
-        <i class="fas fa-arrow-left">
-        </i>
-        <h1>
-            Lacak Pesanan
-        </h1>
-        <i class="fas fa-comment">
-        </i>
-    </div>
-    <div class="map-container">
-        <img alt="Map showing delivery route" class="map" height="667"
-            src="https://storage.googleapis.com/a1aa/image/ZPkX5fiujj04CaJ22grCCd1ReFe0wJBQPxryon9OLOb3KUbnA.jpg"
-            width="375" />
-        <div class="order-status">
-            <div class="header">
-                Lacak Pesanan Anda
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <span class="speed-text">Speed</span>
+                <span class="dish-text">Dish</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="favorit.html">Favorit</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pesanan_diproses.html">Pesanan</a></li>
+                    <li class="nav-item"><a class="nav-link" href="notifikasi_pesan.html">Notifikasi</a></li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="akun.html">Akun</a>
+                    </li>
+                    <li class="nav-item d-flex align-items-center">
+                        <a class="nav-link" href="keranjang.html">Keranjang</a>
+                        <i class="fas fa-shopping-cart cart-icon" href="keranjang.html"></i>
+                    </li>
+                </ul>
             </div>
-            <div class="content">
-                <img alt="Scooter icon" height="50"
-                    src="https://storage.googleapis.com/a1aa/image/8TeOqkWrX70rHCWtsiyjXPOqDjKbAU0sOu0Xqd234nfdFqtTA.jpg"
-                    width="50" />
-                <div class="details">
-                    <h2>
-                        Delivery
-                    </h2>
-                    <p>
-                        25 - 30min
-                    </p>
+        </div>
+    </nav>
+
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-12 mb-3">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Detail Pesanan</h5>
+                        <div class="status mb-3">
+                            Pesanan Anda sedang dalam perjalanan!
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <p class="mb-0"><strong>Nama Driver:</strong> Budi</p>
+                            <p class="mb-0"><strong>Estimasi:</strong> 10 menit</p>
+                        </div>
+                    </div>
                 </div>
-                <button class="track-btn">
-                    Lacak
-                </button>
+            </div>
+
+            <div class="col-12">
+                <div id="map"></div>
             </div>
         </div>
     </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0hAKjx0WV3eWoslvoG2ETi5AHQ9HyTws"></script>
+    <script>
+        function initMap() {
+            const customerLocation = { lat: -6.200000, lng: 106.816666 }; // Contoh koordinat
+            const driverLocation = { lat: -6.210000, lng: 106.820000 };
+
+            const map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 14,
+                center: customerLocation,
+            });
+
+            const customerMarker = new google.maps.Marker({
+                position: customerLocation,
+                map: map,
+                title: "Lokasi Anda",
+            });
+
+            const driverMarker = new google.maps.Marker({
+                position: driverLocation,
+                map: map,
+                title: "Lokasi Driver",
+                icon: "https://maps.google.com/mapfiles/kml/shapes/cabs.png"
+            });
+
+            const routePath = new google.maps.Polyline({
+                path: [customerLocation, driverLocation],
+                geodesic: true,
+                strokeColor: "#8e2d16",
+                strokeOpacity: 1.0,
+                strokeWeight: 3,
+            });
+            routePath.setMap(map);
+        }
+
+        window.onload = initMap;
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
