--- a/pesanan_diproses.html
+++ b/pesanan_diproses.html
@@ -113,7 +113,10 @@
 
             <div class="mt-3">
                 <button class="btn btn-track w-100">
-                    <i class="fas fa-map-marker-alt me-2"></i>Lacak Pesanan
+                    <a href="lacak_pesanan.html" class="btn btn-track w-100">
+                        <i class="fas fa-map-marker-alt me-2"></i>Lacak Pesanan
+                    </a>
+                    
                 </button>
             </div>
         </div>
