--- a/favorit.html
+++ b/favorit.html
@@ -60,7 +60,9 @@
                             <span>⭐ 4.5</span>
                             <span>15-25 menit</span>
                         </div>
-                        <button class="btn btn-primary w-100 mt-2">Pesan</button>
+                        <a href="detail_menu.html" class="text-decoration-none text-dark">
+                            <button class="btn btn-primary w-100 mt-2">Pesan</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -76,7 +78,9 @@
                             <span>⭐ 4.7</span>
                             <span>20-30 menit</span>
                         </div>
+                        <a href="detail_menu.html" class="text-decoration-none text-dark">
                         <button class="btn btn-primary w-100 mt-2">Pesan</button>
+                    </a>
                     </div>
                 </div>
             </div>
@@ -92,7 +96,9 @@
                             <span>⭐ 4.6</span>
                             <span>10-20 menit</span>
                         </div>
-                        <button class="btn btn-primary w-100 mt-2">Pesan</button>
+                        <a href="detail_menu.html" class="text-decoration-none text-dark">
+                            <button class="btn btn-primary w-100 mt-2">Pesan</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -108,7 +114,9 @@
                             <span>⭐ 4.8</span>
                             <span>25-35 menit</span>
                         </div>
-                        <button class="btn btn-primary w-100 mt-2">Pesan</button>
+                        <a href="detail_menu.html" class="text-decoration-none text-dark">
+                            <button class="btn btn-primary w-100 mt-2">Pesan</button>
+                        </a>
                     </div>
                 </div>
             </div>
