--- a/index.html
+++ b/index.html
@@ -293,10 +293,12 @@
         <!-- Nearby Button -->
         <div class="ticket-card" style="background-color: #d32f2f;">
             <i class="fas fa-map-marker-alt fa-2x" style="color: #ffccbc;"></i>
+            <a class="navbar-brand d-flex align-items-center" href="daftar_resto.html">
             <div class="ticket-text">
-                <h6 class="text-white mb-1">Sekitarmu</h6>
+                <h6 class="text-white mb-1">Resto Sekitarmu</h6>
                 <p class="text-white small mb-0">Cek Disini</p>
             </div>
+            </a>
         </div>
 
         <!-- Voucher Button -->
@@ -329,6 +331,7 @@
     </style>
 <div class="container mt-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
+        
         <h4 button class="mb-0 btn btn-maroon text-white px-4">Rekomendasi</h4>
 
     </div>
