--- a/pesan.html
+++ b/pesan.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat dengan Driver</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style css/navbar.css">
-    <link rel="stylesheet" href="style css/pesan.css">
+<link rel="stylesheet" href="style css/navbar.css">
+<link rel="stylesheet" href="style css/pesan.css">
+
 
 </head>
 <body>
-
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -42,10 +42,12 @@
         <div class="chat-messages" id="chatMessages">
             <!-- Pesan dari user -->
             <div class="message user">
+                <img src="image/profile.JPG" alt="User">
                 <div class="content">Halo, apakah pesanan saya sudah diantar?</div>
             </div>
             <!-- Pesan dari driver -->
             <div class="message driver">
+                <img src="image/gojek.jpg" alt="Driver">
                 <div class="content">Halo, saya sedang dalam perjalanan ke lokasi Anda.</div>
             </div>
         </div>
@@ -68,7 +70,10 @@
                 // Tambahkan pesan user ke chat
                 const userMessage = document.createElement('div');
                 userMessage.className = 'message user';
-                userMessage.innerHTML = `<div class="content">${messageText}</div>`;
+                userMessage.innerHTML = `
+                    <img src="https://via.placeholder.com/40" alt="User">
+                    <div class="content">${messageText}</div>
+                `;
                 chatMessages.appendChild(userMessage);
 
                 // Bersihkan input
@@ -81,18 +86,17 @@
                 setTimeout(() => {
                     const driverMessage = document.createElement('div');
                     driverMessage.className = 'message driver';
-                    driverMessage.innerHTML = '<div class="content">Pesanan Anda hampir sampai!</div>';
+                    driverMessage.innerHTML = `
+                        <img src="https://via.placeholder.com/40" alt="Driver">
+                        <div class="content">Pesanan Anda hampir sampai!</div>
+                    `;
                     chatMessages.appendChild(driverMessage);
                     chatMessages.scrollTop = chatMessages.scrollHeight;
                 }, 1000);
             }
         });
     </script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
