--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <!-- (Your existing code for categories remains here) -->
     
     <!-- Categories -->
-    <div class="container mt-4">
+    <!-- <div class="container mt-4">
         <div class="row">
             <div class="col text-center">
                 <div class="category">
@@ -255,7 +255,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!--voucher-->
     <style>.ticket-card {
