--- a/voucher.html
+++ b/voucher.html
@@ -58,7 +58,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="voucher-card voucher-card-horizontal">
                         <div class="voucher-image">
-                            <img src="https://via.placeholder.com/500x300/FF5733/fff" alt="Voucher 1">
+                            <img src="image/voucher.jpg" alt="Voucher 1">
                         </div>
                         <div class="voucher-details">
                             <h5>Voucher Diskon 50%</h5>
@@ -73,7 +73,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="voucher-card voucher-card-horizontal">
                         <div class="voucher-image">
-                            <img src="https://via.placeholder.com/500x300/FF5733/fff" alt="Voucher 1">
+                            <img src="image/voucher.jpg" alt="Voucher 1">
                         </div>
                         <div class="voucher-details">
                             <h5>Voucher Diskon 50%</h5>
@@ -88,7 +88,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="voucher-card voucher-card-horizontal">
                         <div class="voucher-image">
-                            <img src="https://via.placeholder.com/500x300/FF5733/fff" alt="Voucher 1">
+                            <img src="image/voucher.jpg" alt="Voucher 1">
                         </div>
                         <div class="voucher-details">
                             <h5>Voucher Diskon 50%</h5>
@@ -103,7 +103,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="voucher-card voucher-card-horizontal">
                         <div class="voucher-image">
-                            <img src="https://via.placeholder.com/500x300/FF5733/fff" alt="Voucher 1">
+                            <img src="image/voucher.jpg" alt="Voucher 1">
                         </div>
                         <div class="voucher-details">
                             <h5>Voucher Diskon 50%</h5>
@@ -127,7 +127,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="voucher-card voucher-card-horizontal">
                         <div class="voucher-image">
-                            <img src="https://via.placeholder.com/500x300/FF5733/fff" alt="Voucher 4">
+                            <img src="image/voucher2.png" alt="Voucher 4">
                         </div>
                         <div class="voucher-details">
                             <h5>Voucher Diskon Pengiriman</h5>
@@ -143,7 +143,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="voucher-card voucher-card-horizontal">
                         <div class="voucher-image">
-                            <img src="https://via.placeholder.com/500x300/FF5733/fff" alt="Voucher 5">
+                            <img src="image/voucher2.png" alt="Voucher 5">
                         </div>
                         <div class="voucher-details">
                             <h5>Voucher Gratis Ongkir</h5>
@@ -158,7 +158,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="voucher-card voucher-card-horizontal">
                         <div class="voucher-image">
-                            <img src="https://via.placeholder.com/500x300/FF5733/fff" alt="Voucher 5">
+                            <img src="image/voucher2.png" alt="Voucher 5">
                         </div>
                         <div class="voucher-details">
                             <h5>Voucher Gratis Ongkir</h5>
