--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <input type="password" class="input-field" placeholder="Password">
                     <i class="bx bx-lock-alt"></i>
                 </div>
-                <a href="index.html">
+                <a href="menu-utama.html">
                 <div class="input-box">
                     <input type="submit" class="submit" value="Sign In">
                 </div>
@@ -84,7 +84,7 @@
                     <input type="password" class="input-field" placeholder="Retype Password">
                     <i class="bx bx-lock-alt"></i>
                 </div>
-                <a href="index.html">
+                <a href="menu-utama.html">
                 <div class="input-box">
                     <input type="submit" class="submit" value="Register">
                 </div>
